# PraixisEngine

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/controllers/: admin_controller.py  chat_controller.py  rag_controller.py
src/dependencies/: security.py
src/models/: schemas.py
src/routes/: admin_router.py  chat_router.py  main_router.py  rag_router.py
src/services/: chat_service.py  rag_service.py
src/utils/: ai_client.py  concurrency.py  file_parser.py  limiter.py  load_env.py  logger.py  memory.py  vector_db.py
