[project]
name = "praixisengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.7",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.31.0",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "pypdf>=6.10.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.44.0",
]
